# veriflow

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
bench/GenLLM/prompts/: W10.txt  W100.txt  W100C.txt  W20.txt  W20C.txt  W20S.txt  W30.txt  W30C.txt  W30S.txt  W5.txt  W50.txt  W50C.txt  W60.txt  W60C.txt  W80.txt  W80C.txt
bench/T001/: gold.json  prompt.txt
bench/T002/: gold.json  prompt.txt
bench/executable/E001/: gold.json  prompt.txt  workflow.json
bench/executable/E002/: prompt.txt  workflow.json
bench/executable/E003/: prompt.txt  workflow.json
experiments/results/: GenLLM_W10.csv  GenLLM_W100.csv  GenLLM_W100C.csv  GenLLM_W100C_rule.csv  GenLLM_W100_rule.csv  GenLLM_W10_rule.csv  GenLLM_W20.csv  GenLLM_W20C.csv  GenLLM_W20C_rule.csv  GenLLM_W20_rule.csv  GenLLM_W30.csv  GenLLM_W30C.csv  GenLLM_W30C_rule.csv  GenLLM_W30_rule.csv  GenLLM_W50.csv  GenLLM_W50C.csv  GenLLM_W50C_rule.csv  GenLLM_W50_rule.csv  GenLLM_W60.csv  GenLLM_W60C.csv  GenLLM_W60C_rule.csv  GenLLM_W60_rule.csv  GenLLM_W80.csv  GenLLM_W80C.csv  GenLLM_W80C_rule.csv  GenLLM_W80_rule.csv
scripts/: plot_dag.py  plot_results.py  run_semantic_bench.py  summarize_benchmarks.py
tests/: test_executable_bench.py  test_semantic_bench.py  test_structural_bench.py
veriflow/: cli.py
veriflow/executable/: dataflow.py  dryrun.py  faults.py  sandbox.py
veriflow/generator/: genllm.py
veriflow/semantic/: embedding.py  intent_extractor.py  matcher.py
veriflow/structural/: checker.py  metrics.py  schema.py
veriflow/utils/: graph.py  io.py  logger.py
(+2233 files in other folders)
